fix cart middleware
